[gd_scene load_steps=25 format=2]

[ext_resource path="res://Sprites/Button 10 Hover.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Button 10 Press.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Button Half Hover.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Button 10 Normal.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Button 10 Used.png" type="Texture" id=5]
[ext_resource path="res://homespun.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Sprites/Button Half Used.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Background.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Button Press.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Button Hover.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Button Inactive.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Button Even Normal.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Button Even Hover.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Button Even Press.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Button Normal.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Button Half Normal.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Button Half Press.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Button Even Used.png" type="Texture" id=18]
[ext_resource path="res://Main.gd" type="Script" id=19]
[ext_resource path="res://Sounds/Click.wav" type="AudioStream" id=20]

[sub_resource type="DynamicFont" id=3]
size = 12
outline_size = 1
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 8
outline_size = 1
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 8
outline_size = 1
font_data = ExtResource( 6 )

[node name="Main" type="Node2D"]
script = ExtResource( 19 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 45, 80 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pancakes" type="Node2D" parent="."]
position = Vector2( 45, 63 )
__meta__ = {
"_edit_lock_": true
}

[node name="EnemyTimer" type="Timer" parent="."]
autostart = true

[node name="EnemyPassLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = 85.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Pass"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="EnemyPassLabel"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Buttons" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EatPancackeButton" type="TextureButton" parent="UI/Buttons"]
margin_left = 15.0
margin_top = 5.0
margin_right = 75.0
margin_bottom = 20.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Buttons/EatPancackeButton"]
margin_right = 60.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Eat Pancake"
align = 1
valign = 1

[node name="EvenButton" type="TextureButton" parent="UI/Buttons"]
margin_top = 25.0
margin_right = 30.0
margin_bottom = 55.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 13 )
texture_disabled = ExtResource( 18 )

[node name="HalfButton" type="TextureButton" parent="UI/Buttons"]
margin_left = 30.0
margin_top = 25.0
margin_right = 60.0
margin_bottom = 55.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 7 )

[node name="TenButton" type="TextureButton" parent="UI/Buttons"]
margin_left = 60.0
margin_top = 25.0
margin_right = 90.0
margin_bottom = 55.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Win"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -70.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "You win!"
align = 1
valign = 1

[node name="Label2" type="Label" parent="UI/Win"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 55.0
margin_bottom = -35.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "You ate
the last
Pancake!"
align = 1
valign = 1

[node name="Label3" type="Label" parent="UI/Win"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 115.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Click to return
to main menu."
align = 1
valign = 1

[node name="Lost" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Lost"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -70.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "You lost!"
align = 1
valign = 1

[node name="Label2" type="Label" parent="UI/Lost"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 55.0
margin_bottom = -35.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "The computer
player ate
the last
Pancake!"
align = 1
valign = 1

[node name="Label3" type="Label" parent="UI/Lost"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 115.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Click to return
to main menu."
align = 1
valign = 1

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -10.0
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="pressed" from="UI/Buttons/EatPancackeButton" to="." method="_on_EatPancackeButton_pressed"]
[connection signal="pressed" from="UI/Buttons/EvenButton" to="." method="_on_EvenButton_pressed"]
[connection signal="pressed" from="UI/Buttons/HalfButton" to="." method="_on_HalfButton_pressed"]
[connection signal="pressed" from="UI/Buttons/TenButton" to="." method="_on_TenButton_pressed"]
